[tool.poetry]
name = "errors"
version = "0.1.0"
description = ""
authors = ["drapkinamaria <drapkinamaria02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
